--- a/book/cookbook/core-concepts/accounts.html
+++ b/book/cookbook/core-concepts/accounts.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - Solana Zh docs</title>
-        <base href="/">
+        <title>账户 - Solana Zh docs</title>
 
 
         <!-- Custom HTML head -->
@@ -13,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
+        <link rel="stylesheet" href="../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -36,7 +35,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -89,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Chapter 1: 在 Rust 中本地设置、构建和部署 Solana 程序</a></li><li class="chapter-item expanded "><a href="cookbook/index.html"><strong aria-hidden="true">2.</strong> Solana CookBook</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cookbook/getting-started/index.html"><strong aria-hidden="true">2.1.</strong> 入门</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cookbook/getting-started/cooking-with-solana.html"><strong aria-hidden="true">2.1.1.</strong> 与 Solana 一起烹饪</a></li><li class="chapter-item expanded "><a href="cookbook/getting-started/install.html"><strong aria-hidden="true">2.1.2.</strong> Install</a></li></ol></li><li class="chapter-item expanded "><a href="cookbook/core-concepts/index.html"><strong aria-hidden="true">2.2.</strong> 核心概念</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cookbook/core-concepts/accounts.html"><strong aria-hidden="true">2.2.1.</strong> 账户</a></li><li class="chapter-item expanded "><a href="cookbook/core-concepts/programs.html"><strong aria-hidden="true">2.2.2.</strong> Programs</a></li><li class="chapter-item expanded "><a href="cookbook/core-concepts/transactions.html"><strong aria-hidden="true">2.2.3.</strong> Transactions</a></li><li class="chapter-item expanded "><a href="cookbook/core-concepts/program-derived-address.html"><strong aria-hidden="true">2.2.4.</strong> Program Derived Address</a></li><li class="chapter-item expanded "><a href="cookbook/core-concepts/cross-program-invocations.html"><strong aria-hidden="true">2.2.5.</strong> Cross Program Invocations</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../chapter_1.html"><strong aria-hidden="true">1.</strong> Chapter 1: 在 Rust 中本地设置、构建和部署 Solana 程序</a></li><li class="chapter-item expanded "><a href="../../cookbook/index.html"><strong aria-hidden="true">2.</strong> Solana CookBook</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../cookbook/getting-started/index.html"><strong aria-hidden="true">2.1.</strong> 入门</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../cookbook/getting-started/cooking-with-solana.html"><strong aria-hidden="true">2.1.1.</strong> 与 Solana 一起烹饪</a></li><li class="chapter-item expanded "><a href="../../cookbook/getting-started/install.html"><strong aria-hidden="true">2.1.2.</strong> Install</a></li></ol></li><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/index.html"><strong aria-hidden="true">2.2.</strong> 核心概念</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/accounts.html" class="active"><strong aria-hidden="true">2.2.1.</strong> 账户</a></li><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/programs.html"><strong aria-hidden="true">2.2.2.</strong> Programs</a></li><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/transactions.html"><strong aria-hidden="true">2.2.3.</strong> Transactions</a></li><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/program-derived-address.html"><strong aria-hidden="true">2.2.4.</strong> Program Derived Address</a></li><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/cross-program-invocations.html"><strong aria-hidden="true">2.2.5.</strong> Cross Program Invocations</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -145,7 +144,7 @@
                     <h1 class="menu-title">Solana Zh docs</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -174,14 +173,48 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <h1 id="账户"><a class="header" href="#账户">账户</a></h1>
+<p>Solana 内的帐户用于存储状态。它们是在 Solana 上进行开发的重要构建块。</p>
+<h2 id="fact-事实"><a class="header" href="#fact-事实">FACT 事实</a></h2>
+<blockquote>
+<p>情况说明书</p>
+<ul>
+<li>账户用于存储数据</li>
+<li>每个账户都有一个唯一的地址</li>
+<li>帐户的最大大小为 10MB（10 兆字节）</li>
+<li>PDA 帐户的最大大小为 10KB（10 千字节）</li>
+<li>PDA 帐户可用于代表程序签名</li>
+<li>帐户大小在创建时是固定的，但可以使用 <a href="https://solanacookbook.com/references/programs.html#how-to-read-multiple-instructions-from-a-transaction">realloc 进行调整</a></li>
+<li>账户数据存储是通过租金支付的</li>
+<li>默认帐户所有者是系统程序</li>
+</ul>
+</blockquote>
+<h2 id="深入"><a class="header" href="#深入">深入</a></h2>
+<h3 id="账户模型"><a class="header" href="#账户模型">账户模型</a></h3>
+<p>Solana 上有 3 种账户：</p>
+<ul>
+<li>数据帐户存储数据</li>
+<li>程序帐户存储可执行程序</li>
+<li>本机帐户表示 Solana 上的本机程序，例如系统、权益和投票</li>
+</ul>
+<p>数据帐户内有 2 种类型：</p>
+<ul>
+<li>系统拥有的帐户</li>
+<li>PDA（程序派生地址）帐户</li>
+</ul>
+<p>每个帐户都有一个地址（通常是公钥）和所有者（程序帐户的地址）。帐户存储的完整字段列表如下。</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../../cookbook/core-concepts/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next prefetch" href="../../cookbook/core-concepts/programs.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -189,7 +222,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../../cookbook/core-concepts/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next prefetch" href="../../cookbook/core-concepts/programs.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -218,13 +257,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../../elasticlunr.min.js"></script>
+        <script src="../../mark.min.js"></script>
+        <script src="../../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../../clipboard.min.js"></script>
+        <script src="../../highlight.js"></script>
+        <script src="../../book.js"></script>
 
         <!-- Custom JS scripts -->
 
