--- a/book/cookbook/core-concepts/index.html
+++ b/book/cookbook/core-concepts/index.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - Solana Zh docs</title>
-        <base href="/">
+        <title>核心概念 - Solana Zh docs</title>
 
 
         <!-- Custom HTML head -->
@@ -13,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
+        <link rel="stylesheet" href="../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -36,7 +35,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -89,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Chapter 1: 在 Rust 中本地设置、构建和部署 Solana 程序</a></li><li class="chapter-item expanded "><a href="cookbook/index.html"><strong aria-hidden="true">2.</strong> Solana CookBook</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cookbook/getting-started/index.html"><strong aria-hidden="true">2.1.</strong> 入门</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cookbook/getting-started/cooking-with-solana.html"><strong aria-hidden="true">2.1.1.</strong> 与 Solana 一起烹饪</a></li><li class="chapter-item expanded "><a href="cookbook/getting-started/install.html"><strong aria-hidden="true">2.1.2.</strong> Install</a></li></ol></li><li class="chapter-item expanded "><a href="cookbook/core-concepts/index.html"><strong aria-hidden="true">2.2.</strong> 核心概念</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cookbook/core-concepts/accounts.html"><strong aria-hidden="true">2.2.1.</strong> 账户</a></li><li class="chapter-item expanded "><a href="cookbook/core-concepts/programs.html"><strong aria-hidden="true">2.2.2.</strong> Programs</a></li><li class="chapter-item expanded "><a href="cookbook/core-concepts/transactions.html"><strong aria-hidden="true">2.2.3.</strong> Transactions</a></li><li class="chapter-item expanded "><a href="cookbook/core-concepts/program-derived-address.html"><strong aria-hidden="true">2.2.4.</strong> Program Derived Address</a></li><li class="chapter-item expanded "><a href="cookbook/core-concepts/cross-program-invocations.html"><strong aria-hidden="true">2.2.5.</strong> Cross Program Invocations</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../chapter_1.html"><strong aria-hidden="true">1.</strong> Chapter 1: 在 Rust 中本地设置、构建和部署 Solana 程序</a></li><li class="chapter-item expanded "><a href="../../cookbook/index.html"><strong aria-hidden="true">2.</strong> Solana CookBook</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../cookbook/getting-started/index.html"><strong aria-hidden="true">2.1.</strong> 入门</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../cookbook/getting-started/cooking-with-solana.html"><strong aria-hidden="true">2.1.1.</strong> 与 Solana 一起烹饪</a></li><li class="chapter-item expanded "><a href="../../cookbook/getting-started/install.html"><strong aria-hidden="true">2.1.2.</strong> Install</a></li></ol></li><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/index.html" class="active"><strong aria-hidden="true">2.2.</strong> 核心概念</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/accounts.html"><strong aria-hidden="true">2.2.1.</strong> 账户</a></li><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/programs.html"><strong aria-hidden="true">2.2.2.</strong> Programs</a></li><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/transactions.html"><strong aria-hidden="true">2.2.3.</strong> Transactions</a></li><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/program-derived-address.html"><strong aria-hidden="true">2.2.4.</strong> Program Derived Address</a></li><li class="chapter-item expanded "><a href="../../cookbook/core-concepts/cross-program-invocations.html"><strong aria-hidden="true">2.2.5.</strong> Cross Program Invocations</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -145,7 +144,7 @@
                     <h1 class="menu-title">Solana Zh docs</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -174,14 +173,19 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <h1 id="核心概念"><a class="header" href="#核心概念">核心概念</a></h1>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../../cookbook/getting-started/install.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next prefetch" href="../../cookbook/core-concepts/accounts.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -189,7 +193,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../../cookbook/getting-started/install.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next prefetch" href="../../cookbook/core-concepts/accounts.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -218,13 +228,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../../elasticlunr.min.js"></script>
+        <script src="../../mark.min.js"></script>
+        <script src="../../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../../clipboard.min.js"></script>
+        <script src="../../highlight.js"></script>
+        <script src="../../book.js"></script>
 
         <!-- Custom JS scripts -->
 
